[package]
name = "uom-grades"
version = "0.1.1"
edition = "2021"

[lib]
name = "uom_grades_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
keyring = "2.0"
tauri-plugin-http = "2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
url = "2.5.8"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-haptics = "2"
